--- a/Src/UI/WPR.UI/WPR.UI.csproj
+++ b/Src/UI/WPR.UI/WPR.UI.csproj
@@ -18,6 +18,10 @@
   </PropertyGroup>
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
+    <AvaloniaXaml Remove="Models\**" />
+    <Compile Remove="Models\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <None Remove="Models\**" />
     <EmbeddedResource Remove="Assets\Resources.resx" />
     <None Remove=".gitignore" />
   </ItemGroup>
@@ -73,8 +77,5 @@
     <Compile Update="Views\ProgressView.axaml.cs">
       <DependentUpon>ProgressView.axaml</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
