--- a/Src/Core/WPR.WindowsCompability/WPR.WindowsCompability.csproj
+++ b/Src/Core/WPR.WindowsCompability/WPR.WindowsCompability.csproj
@@ -10,6 +10,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="6.0.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="$(SolutionDir)\Core\WPR.Common\WPR.Common.csproj" />
   </ItemGroup>
 
